--- a/week7/package.json
+++ b/week7/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "NODE_ENV=development nodemon --exec ts-node app.ts",
+    "dev": "NODE_ENV=development nodemon --exec ts-node server.ts",
     "start:prod": "NODE_ENV=production nodemon --exec ts-node app.ts"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "log4js": "^6.9.1",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3"
